[package]
name = "crypto"
version = "0.1.0"
authors = ["Alexander Hofmann <alexhofmann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "crypto"
path = "src/lib.rs"

[[bin]]
name = "cryptomain"
path = "src/main.rs"

[dependencies.num-bigint]
default-features = false
version = "^0.3"
features = ["serde", "rand"]

[dependencies.num-integer]
version = "^0.1"
default-features = false

[dependencies.num-traits]
version = "^0.2"
default-features = false

[features]
default = ['std']
std = [
    'num-bigint/std',
    'num-integer/std',
    'num-traits/std',
]