[package]
name = "crypto"
version = "0.1.0"
authors = ["Alexander Hofmann <alexhofmann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "crypto"
path = "src/lib.rs"

[[bin]]
name = "cryptomain"
path = "src/main.rs"
required-features = ["std"]


[dependencies]
num-bigint = { version = "0.3.0", default-features = false }
num-integer = { version = "^0.1", default-features = false }
num-traits = { version = "^0.2", default-features = false }
num-iter = { version = "0.1.42", default-features = false }
digest = { version = "0.9.0", default-features = false }
blake2 = { version = "0.9.0", default-features = false }
sha2 = { version = "0.9.0", default-features = false }
rayon = { version = "1.5.0", default-features = false }
indicatif = {version = "*", features = ["rayon"]}

[dev-dependencies]
hex-literal = { version = "0.3.1", default-features = false }

[features]
std = [
    'num-bigint/std',
    'num-integer/std',
    'num-traits/std',
    'num-iter/std',
    'digest/std',
    'blake2/std',
    'sha2/std'
]
